--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <p><span class="title-s">Email: </span> <span>yamanpandey2056@gmail.com</span></p>
                         <p><span class="title-s">Phone: </span> <span>507-304-5525</span></p>
 
-<button class="button" onClick="window.location.href='/assets/pdf/Resume.pdf' ;" target="_blank" > 
+<button class="button" onClick="window.open('/assets/pdf/Resume.pdf','_blank')> 
 
 
      <span class="icon">Resume</span> 
