--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <p><span class="title-s">Email: </span> <span>yamanpandey2056@gmail.com</span></p>
                         <p><span class="title-s">Phone: </span> <span>507-304-5525</span></p>
 
-<button class="button" onClick="window.open('/assets/pdf/Resume.pdf','_blank')"> 
+<button class="button" onClick="/assets/pdf/Resume.pdf","_blank"> 
 
 
      <span class="icon">Resume</span> 
@@ -188,7 +188,7 @@ My hobbies includes writing poetry, reading, and hiking.
                 <p class="s-description text-center">
 I established the MATLAB Program to project the ball in air while considering the air-drag on the presence of a magnet.It gave a solid understanding on how simulation works. 
 
-<h1><button class="button" onClick="window.location.href='/Users/yamanpandey/Desktop/port/assets/pdf/ab.pdf' ;" > 
+<h1><button class="button" onClick="/assets/pdf/ab.pdf' ;" > 
      <span class="icon">MATLAB Code</span>
 </button>
 </h1>
@@ -256,7 +256,7 @@ to the string and hammer motor hit the string to play the music.
  <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-               <a target="_blank" href="/Users/yamanpandey/Desktop/port/assets/pdf/306.pdf"><img src="assets/img/306.png" width = "400" height="300" alt="Five cats looking around a field." /></a>
+               <a target="_blank" href="/assets/pdf/306.pdf"><img src="assets/img/306.png" width = "400" height="300" alt="Five cats looking around a field." /></a>
               </div>
               <div class="service-content">
                 <h2 class="s-title">Carbon Fiber in an Aviation Industry</h2>
