--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ My hobbies includes writing poetry, reading, and hiking.
                 <p class="s-description text-center">
 I established the MATLAB Program to project the ball in air while considering the air-drag on the presence of a magnet.It gave a solid understanding on how simulation works. 
 
-<h1><button class="button" onClick="/assets/pdf/ab.pdf' ;" > 
+<h1><button class="button" onClick="/assets/pdf/ab.pdf';","_blank" > 
      <span class="icon">MATLAB Code</span>
 </button>
 </h1>
@@ -233,16 +233,16 @@ to the string and hammer motor hit the string to play the music.
               </div>
               <div class="service-content">
 
-<a target="_blank" href="/Users/yamanpandey/Desktop/port/assets/pdf/CamProjectSam.gif"><img src="assets/img/Envelope.png" width = "400" height="300" alt="Five cats looking around a field." /></a>
+<a target="_blank" href="/assets/pdf/CamProjectSam.gif"><img src="assets/img/Envelope.png" width = "400" height="300" alt="Five cats looking around a field." /></a>
   <!--<img src="assets/img/Envelope.png"   width = "400" height="300"> -->
                 <h2 class="s-title">Envelope Feeding and Stamping</h2>
                 <p class="s-description text-center">
                   We designed the 1 DOF mechanism in SAM to feed the envelope and stamp using a crack. </p>
 
-<button class="button" onClick="window.location.href='/Users/yamanpandey/Desktop/port/assets/pdf/CamProjectSam.gif' ;" > 
+<button class="button" onClick="/assets/pdf/CamProjectSam.gif","_blank" > 
      <span class="icon">Design Animation</span>
 </button>
-<button class="button" onClick="window.location.href='/Users/yamanpandey/Desktop/port/assets/pdf/418.pptx' ;" > 
+<button class="button" onClick="/assets/pdf/418.pptx","_blank" > 
      <span class="icon">Presentation</span>
 </button>
 
@@ -263,7 +263,7 @@ to the string and hammer motor hit the string to play the music.
                 <p class="s-description text-center">
                  We investigated the property of carbon-Fiber and its future in the aviation industry.
 </p>
-<button class="button" onClick="window.location.href='/Users/yamanpandey/Desktop/port/assets/pdf/306.pdf' ;" > 
+<button class="button" onClick="/assets/pdf/306.pdf","_blank" > 
      <span class="icon">Report</span>
 </button> 
                 </p>
