--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <p><span class="title-s">Email: </span> <span>yamanpandey2056@gmail.com</span></p>
                         <p><span class="title-s">Phone: </span> <span>507-304-5525</span></p>
 
-<button class="button" onClick="/assets/pdf/Resume.pdf","_blank"> 
+<button class="button" onClick="/assets/pdf/Resume.pdf"> 
 
 
      <span class="icon">Resume</span> 
@@ -188,7 +188,7 @@ My hobbies includes writing poetry, reading, and hiking.
                 <p class="s-description text-center">
 I established the MATLAB Program to project the ball in air while considering the air-drag on the presence of a magnet.It gave a solid understanding on how simulation works. 
 
-<h1><button class="button" onClick="/assets/pdf/ab.pdf';","_blank" > 
+<h1><button class="button" onClick="/assets/pdf/ab.pdf" > 
      <span class="icon">MATLAB Code</span>
 </button>
 </h1>
