--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ My hobbies includes writing poetry, reading, and hiking.
                 <p class="s-description text-center">
 I established the MATLAB Program to project the ball in air while considering the air-drag on the presence of a magnet.It gave a solid understanding on how simulation works. 
 
-<h1><button class="button" onClick="/assets/pdf/ab.pdf" > 
+<h1><button class="button" onClick="/assets/pdf/ab.pdf","_blank" > 
      <span class="icon">MATLAB Code</span>
 </button>
 </h1>
@@ -234,7 +234,7 @@ to the string and hammer motor hit the string to play the music.
               </div>
               <div class="service-content">
 
-<a target="_blank" href="/assets/pdf/CamProjectSam.gif"><img src="assets/img/Envelope.png" width = "400" height="300" alt="Five cats looking around a field." /></a>
+<a target="_blank" href="/assets/pdf/CamProjectSam.gif"><img src="assets/img/Envelope.png" width = "400" height="300"></a>
   <!--<img src="assets/img/Envelope.png"   width = "400" height="300"> -->
                 <h2 class="s-title">Envelope Feeding and Stamping</h2>
                 <p class="s-description text-center">
