--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ My hobbies includes writing poetry, reading, and hiking.
                 <p class="s-description text-center">
 I established the MATLAB Program to project the ball in air while considering the air-drag on the presence of a magnet.It gave a solid understanding on how simulation works. 
 
-<h1><button class="button" onClick="/assets/pdf/ab.pdf","_blank" > 
+<h1><button class="button" onClick="/assets/pdf/ab.pdf"> 
      <span class="icon">MATLAB Code</span>
 </button>
 </h1>
