--- a/index.html
+++ b/index.html
@@ -88,12 +88,10 @@
                         <p><span class="title-s">Email: </span> <span>yamanpandey2056@gmail.com</span></p>
                         <p><span class="title-s">Phone: </span> <span>507-304-5525</span></p>
 
-<button class="button" onClick="/assets/pdf/Resume.pdf">
-
-
-
-     <span class="icon">Resume</span> 
-</button> 
+<button class="button" onClick="window.open('/assets/pdf/Resume.pdf', '_blank')">
+    <span class="icon">Resume</span> 
+</button>
+                      
 <div class="socials">
                       <ul>
                         <li><a target="_blank" href="https://www.facebook.com/yaman.pandey.3"><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>
