--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@ My hobbies includes writing poetry, reading, and hiking.
                 <p class="s-description text-center">
 I established the MATLAB Program to project the ball in air while considering the air-drag on the presence of a magnet.It gave a solid understanding on how simulation works. 
 
-<h1><button class="button" onClick="/assets/pdf/ab.pdf"> 
-     <span class="icon">MATLAB Code</span>
+<h1><button class="button" onClick="window.open('/assets/pdf/ab.pdf', '_blank')">
+    <span class="icon">MATLAB Code</span> 
 </button>
 </h1>
                
@@ -239,11 +239,12 @@ to the string and hammer motor hit the string to play the music.
                 <p class="s-description text-center">
                   We designed the 1 DOF mechanism in SAM to feed the envelope and stamp using a crack. </p>
 
-<button class="button" onClick="/assets/pdf/CamProjectSam.gif","_blank" > 
-     <span class="icon">Design Animation</span>
+<button class="button" onClick="window.open('/assets/pdf/CamProjectSam.gif', '_blank')">
+    <span class="icon">Design Animation</span> 
 </button>
-<button class="button" onClick="/assets/pdf/418.pptx","_blank" > 
-     <span class="icon">Presentation</span>
+<button class="button" onClick="window.open('/assets/pdf/418.pptx', '_blank')">
+    <span class="icon">Project Presentation</span> 
+</button>
 </button>
 
 
@@ -263,9 +264,9 @@ to the string and hammer motor hit the string to play the music.
                 <p class="s-description text-center">
                  We investigated the property of carbon-Fiber and its future in the aviation industry.
 </p>
-<button class="button" onClick="/assets/pdf/306.pdf","_blank" > 
-     <span class="icon">Report</span>
-</button> 
+<button class="button" onClick="window.open('/assets/pdf/306.pdf', '_blank')">
+    <span class="icon">Project Report</span> 
+</button>
                 </p>
               </div>
             </div>
