--- a/index.html
+++ b/index.html
@@ -291,7 +291,8 @@ to the string and hammer motor hit the string to play the music.
               
           </div>
 
-<h5>&bull; Investigated the potential of Pulsed Eddy Current (PEC) techniques for multi-target Non-Destructive Testing (NDT).</h5>
+<h5>&bull; Investigated the potential of Pulsed Eddy Current (PEC) techniques for multi-target</h5>
+<h5>&bull;Non-Destructive Testing (NDT).</h5>
 <h5>&#8226; Utilized COMSOL to simulate an experiment and LabVIEW for testing sensors and amplifiers.</h5>
 <h5>&bull;Fabricated parts using lathe, mill and vertical band saw for the setup of the experiment.</h5>
 <h5>&#8226;  Awarded $2000 foundation grant from the Undergraduate Research Center to conduct the research.</h5>
