--- a/index.html
+++ b/index.html
@@ -233,13 +233,13 @@ to the string and hammer motor hit the string to play the music.
               </div>
               <div class="service-content">
 
-<a target="_blank" href="/assets/pdf/CamProjectSam.gif"><img src="assets/img/Envelope.png" width = "400" height="300"></a>
+<a target="_blank" href="/assets/pdf/CamProjectSam.GIF"><img src="assets/img/Envelope.png" width = "400" height="300"></a>
   <!--<img src="assets/img/Envelope.png"   width = "400" height="300"> -->
                 <h2 class="s-title">Envelope Feeding and Stamping</h2>
                 <p class="s-description text-center">
                   We designed the 1 DOF mechanism in SAM to feed the envelope and stamp using a crack. </p>
 
-<button class="button" onClick="window.open('/assets/pdf/CamProjectSam.gif', '_blank')">
+<button class="button" onClick="window.open('/assets/pdf/CamProjectSam.GIF', '_blank')">
     <span class="icon">Design Animation</span> 
 </button>
 <button class="button" onClick="window.open('/assets/pdf/418.pptx', '_blank')">
