--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ to the string and hammer motor hit the string to play the music.
 
 
 
-<img src="assets/img/Research.png" width = "400" height="300">
+<img src="assets/img/Research.png">
                 
 
 
