--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ My hobbies includes writing poetry, reading, and hiking.
                
               </div>
               <div class="service-content">
-<img src="assets/img/Bicycle.jpg"   width = "400" height="300">
+<a target="_blank" img src="assets/img/Bicycle.jpg"   width = "400" height="300">
                 <h2 class="s-title">Bicycle Frame Project</h2>
                 <p class="s-description text-center">
                    I designed the bicycle frame in CREO and performed the FEA analysis on it to optimize the mass.
