--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
           <li><a class="nav-link scrollto active" href="#home">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About me</a></li>
           <li><a class="nav-link scrollto" href="#projects">Projects</a></li>
+          <li><a class="nav-link scrollto" href="#research">Research</a></li>
+          <li><a class="nav-link scrollto" href="#work">Work Experiences</a></li>
           <li><a class="nav-link scrollto" href="#poerty">Poems</a></li>
           
          
@@ -280,7 +282,7 @@ to the string and hammer motor hit the string to play the music.
 
     </section><!-- End Services Section -->
 
-
+ <section id = "research">
 <div class="title-box text-center">
 
 
@@ -304,11 +306,11 @@ to the string and hammer motor hit the string to play the music.
 
 
 
-
+</section>
 
 <!-- INTERN -->
 
-<section id = "internship">
+<section id = "work">
  <div class="title-box text-center">
 
 
