--- a/index.html
+++ b/index.html
@@ -322,6 +322,7 @@ to the string and hammer motor hit the string to play the music.
 <p class="subtitle-a">
                 I am working as a Jr. Reliability Engineer at Firmenich, Inc.
               </p>
+    <img src="assets/img/dsm-firmenich-at-a-glance.thumb.800.480.avif" class="img-fluid rounded b-shadow-a">
  <div class="box-shadow-full">
              
             
