--- a/index.html
+++ b/index.html
@@ -353,6 +353,7 @@ to the string and hammer motor hit the string to play the music.
                 I completed my internship for the Bombardier Recreational Products(BRP) on their St. Peter site (Alumacraft Boat Co.). I worked there 
 from May-2022 to August-2022.
               </p>
+    <img src="assets/img/BRP_inc_logo.svg.png" class="img-fluid rounded b-shadow-a" height ="100" width = "500">
  <div class="box-shadow-full">
              
             
