--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
                     <div class="col-sm-6 col-md-7">
                       
                         <p><span class="title-s">Name: </span> <span>Yaman Pandey</span></p>
-                        <p><span class="title-s">Education: </span> <span>Bachelors in Mechanical Engineering</span></p>
+                        <p><span class="title-s">Education: </span> <span>Masters in Manufacturing Engineering Technology (Expected Graduation: December 2026)</span></p>
+                      <p> Bachelors in Mechanical Engineering (Graduated: May 2023) </p>
                         <p><span class="title-s">Email: </span> <span>yamanpandey2056@gmail.com</span></p>
                         <p><span class="title-s">Phone: </span> <span>507-304-5525</span></p>
 
