--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
                       </h5>
                     </div>
                     <p class="lead">
-                   My name is Yaman Pandey. I am a recent graduate from Minnesota State University, Mankato. During my undergraduate, I performed various projects, research works, and internship.
-My hobbies includes writing poetry, reading, and hiking. 
+                   My name is Yaman Pandey. I am a Mechanical Engineer working towards my masters degree in Manufacturing 
+                      Engineering Technology. My hobbies includes videography, writing poetry, and hiking. 
                     </p>
                     
                   </div>
