--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p> -->
          <!-- <h1 class="hero-title mb-4">I am Yaman Pandey</h1> -->
-         <!--<p class="hero-subtitle"><span class="typed" data-typed-items=" Learner"></span></p> -->
+         <p class="hero-subtitle"><span class="typed" data-typed-items=" Welcome! Learn more about me here."></span></p> 
          <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -80,7 +80,7 @@
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
-                        <img src="assets/img/IMG_2905_Original.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                        <img src="assets/img/1685025666249.jpg" class="img-fluid rounded b-shadow-a" alt="">
                       </div>
                     </div>
                     <div class="col-sm-6 col-md-7">
@@ -302,7 +302,8 @@ to the string and hammer motor hit the string to play the music.
 
 
 
-<img src="assets/img/Research.png">
+
+    <img src="assets/img/Research.png" class="img-fluid rounded b-shadow-a" height ="1000" width = "800">
                 
 
 
