--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ to the string and hammer motor hit the string to play the music.
 
 
 
-    <img src="assets/img/Research.png" class="img-fluid rounded b-shadow-a" height ="1000" width = "800">
+    <img src="assets/img/Research.png" class="img-fluid rounded b-shadow-a" height ="1000" width = "800" class = "center">
                 
 
 
