--- a/index.html
+++ b/index.html
@@ -476,6 +476,18 @@ from May-2022 to August-2022.
 
 
    
+<h3> गजल </h3>
+            
+<p class="subtitle-a">
+                जोखम मा बाँनु आनै रहर हो</p>
+  <p class="subtitle-a">यहाँ जे पन हुन सछ यो शहर हो </p>
+<p class="subtitle-a">आफ्नै हात ले खुवाएउ, मैले पनि खाइदिएं </p>
+<p class="subtitle-a">नत्र थाहा थियो तिम्ले दिएको त्यो जहर हो </p>
+   <p> </p>
+<p class="subtitle-a">रै पछ नेता आएछन न बा घरमा</p>
+   <p class="subtitle-a">हो बाबु यो चुनावको प्रहर हो  </p>
+   <p class="subtitle-a">म तिरै आइरहेछ रङिन डोली बोकेर</p>
+     <p class="subtitle-a">कि त्यो मृत्‍यु हो कि त्यो माया को लहर हो    </p>
               
           </div>
 
