--- a/index.html
+++ b/index.html
@@ -62,7 +62,15 @@
           <!--<p class="display-6 color-d">Hello, world!</p> -->
          <!-- <h1 class="hero-title mb-4">I am Yaman Pandey</h1> -->
          <p class="hero-subtitle"><span class="typed" data-typed-items=" Welcome! Learn more about me here."></span></p> 
-         <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
+          <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button"> Know about me</a></p>
+<p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#projects" role="button"> My engineering projects</a></p>
+          <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#research" role="button"> My engineering researches</a></p>
+<p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#work" role="button"> My professional experiences</a></p>
+          <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#poems" role="button"> Read my poems</a></p>
+          <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#contact" role="button"> Contact me</a></p>
+
+
+          
         </div>
       </div>
     </div>
