--- a/index.html
+++ b/index.html
@@ -298,8 +298,7 @@ to the string and hammer motor hit the string to play the music.
 
 
               <h2>
-                Investigation of pulsed eddy
-                <h2>current for multi-target non-</h2> <h2>destructive testing
+                Investigation of pulsed eddy current for multi-target non- destructive testing
               </h2>
               
               
