--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
          <!-- <h1 class="hero-title mb-4">I am Yaman Pandey</h1> -->
          <p class="hero-subtitle"><span class="typed" data-typed-items=" Welcome! Learn more about me here."></span></p> 
           <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button"> Know about me</a></p>
-<p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#projects" role="button"> My engineering projects</a></p>
+<p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#projects" role="button"> My academic projects</a></p>
           <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#research" role="button"> My engineering researches</a></p>
 <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#work" role="button"> My professional experiences</a></p>
           <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#poems" role="button"> Read my poems</a></p>
@@ -149,7 +149,7 @@
 
 
               <h1>
-                Major Projects/Research
+                Academic Projects
               </h1>
               
               
@@ -295,6 +295,19 @@ to the string and hammer motor hit the string to play the music.
 
  <section id = "research">
 <div class="title-box text-center">
+
+  
+              <h1>
+                Academic Projects
+              </h1>
+
+ <h2>
+               Application of Lean Manufacturing in the Food Powder Products Sector
+              </h2>
+<h5>&bull; Researched on the application of the lean manufacturing in the food powder products sector for a graduate level lean manufacturing class</h5>
+<h5>&#8226; Determied how lean manufacturing is being used on the food powder plants.</h5>
+<h5>&bull;Investigated on the areas where the powder food industry could be improved in terms of lean principles.</h5>
+<h5>&#8226;  Write a research paper on the research findings and suggestions. </h5>
 
 
               <h2>
