--- a/index.html
+++ b/index.html
@@ -658,6 +658,8 @@ to the string and hammer motor hit the string to play the music.
                         <li><a target="_blank" href="https://www.facebook.com/yaman.pandey.3"><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>
                         <li><a target="_blank" href="https://www.instagram.com/yrajp/?igshid=YmMyMTA2M2Y%3D"><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
                         <li><a target="_blank" href="https://www.linkedin.com/in/yaman-pandey-40a536165/"><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
+                        <li><a target="_blank" href="https://www.youtube.com/@yamanpandey8720"><span class="ico-circle"><i class="bi bi-youtube"></i></span></a></li>
+                      </ul>
                       </ul>
 </div>
 
