--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
                         <li><a target="_blank" href="https://www.facebook.com/yaman.pandey.3"><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>
                         <li><a target="_blank" href="https://www.instagram.com/yrajp/?igshid=YmMyMTA2M2Y%3D"><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
                         <li><a target="_blank" href="https://www.linkedin.com/in/yaman-pandey-40a536165/"><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
+                        <li><a target="_blank" href="https://www.youtube.com/@yamanpandey8720"><span class="ico-circle"><i class="bi bi-youtube"></i></span></a></li>
                       </ul>
                     </div>
 
@@ -161,6 +162,37 @@
               <div class="service-ico">
                 
               </div>
+
+
+<div class="service-content">
+
+<a target="_blank" href="/assets/pdf/CamProjectSam.GIF"><img src="assets/img/Envelope.png" width = "400" height="300"></a>
+  <!--<img src="assets/img/Screenshot 2025-01-22 125600.jpg"   width = "400" height="300"> -->
+                <h2 class="s-title">Hockey Stadium Construction Project</h2>
+                <p class="s-description text-center">
+                  Created a detailed report for the initiation, planning, execution, and control of the hockey stadium construction project for a graduate level project management class. </p>
+
+<button class="button" onClick="window.open('/assets/pdf/Hockey Stadium.pdf', '_blank')">
+    <span class="icon">Project Report</span> 
+</button>
+<button class="button" onClick="window.open('/assets/pdf/Hockey stadium presentation.pptx', '_blank')">
+    <span class="icon">Project Presentation</span> 
+</button>
+</button>
+
+
+
+                </p>
+              </div>
+            </div>
+          </div>
+
+
+
+
+
+
+              
               <div class="service-content">
 
                     <img src="assets/img/combat robot.jpeg"  width = "400" height="300">
