--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
 <div class="service-content">
 
-<a target="_blank" href="/assets/pdf/CamProjectSam.GIF"><img src="assets/img/Envelope.png" width = "400" height="300"></a>
+ <img src="assets/img/Screenshot 2025-01-22 125600.jpg"  width = "400" height="300">
   <!--<img src="assets/img/Screenshot 2025-01-22 125600.jpg"   width = "400" height="300"> -->
                 <h2 class="s-title">Hockey Stadium Construction Project</h2>
                 <p class="s-description text-center">
