--- a/index.html
+++ b/index.html
@@ -146,101 +146,119 @@
 
     <!-- ======= Projects Section ======= -->
    <section id="projects">
-  <div class="title-box text-center">
-    <h1>Academic Projects</h1>
-  </div>
-  <div class="row">
-    <!-- Project 1 -->
-    <div class="col-md-4">
-      <div class="service-box">
-        <img src="assets/img/Screenshot 2025-01-22 125600.jpg" class="img-fluid" alt="Hockey Stadium Construction Project">
-        <h2 class="s-title">Hockey Stadium Construction Project</h2>
-        <p class="s-description text-center">
-          Created a detailed report for the initiation, planning, execution, and control of the hockey stadium construction project for a graduate-level project management class.
-        </p>
-        <button class="button" onClick="window.open('/assets/pdf/Hockey Stadium.pdf', '_blank')">Project Report</button>
-        <button class="button" onClick="window.open('/assets/pdf/Hockey stadium presentation.pptx', '_blank')">Project Presentation</button>
-      </div>
+  <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Academic Projects</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    /* General styles for the project hover effect */
+    .project-hover {
+      transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+      cursor: pointer;
+    }
+
+    .project-hover:hover {
+      transform: scale(1.1); /* Enlarge on hover */
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3); /* Add shadow effect */
+      z-index: 10; /* Ensure it appears above other content */
+      position: relative;
+    }
+
+    /* Ensure images inside the projects scale properly */
+    .project-hover img {
+      transition: transform 0.3s ease-in-out;
+    }
+
+    .project-hover:hover img {
+      transform: scale(1.05); /* Slightly enlarge the image for extra effect */
+    }
+
+    /* Add some spacing for better layout */
+    .service-box {
+      margin-bottom: 30px;
+      text-align: center;
+    }
+
+    .service-box img {
+      max-width: 100%;
+      height: auto;
+    }
+
+    .s-title {
+      margin-top: 15px;
+      font-size: 1.5rem;
+      font-weight: bold;
+    }
+
+    .s-description {
+      font-size: 1rem;
+      color: #555;
+    }
+
+    .button {
+      margin: 5px;
+      padding: 10px 15px;
+      font-size: 0.9rem;
+      border: none;
+      border-radius: 5px;
+      background-color: #007bff;
+      color: white;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+
+    .button:hover {
+      background-color: #0056b3;
+    }
+  </style>
+</head>
+<body>
+  <section id="projects">
+    <div class="title-box text-center">
+      <h1>Academic Projects</h1>
     </div>
-    <!-- Project 2 -->
-    <div class="col-md-4">
-      <div class="service-box">
-        <img src="assets/img/combat robot.jpeg" class="img-fluid" alt="Combat Robot">
-        <h2 class="s-title">Combat Robot</h2>
-        <p class="s-description text-center">
-          We successfully designed, built, and programmed a combat robot for the National Robotic Challenge, winning a Bronze award. Skills used include Arduino programming, CAD design, FEA analysis, and fabrication.
-        </p>
+    <div class="row">
+      <!-- Project 1 -->
+      <div class="col-md-4">
+        <div class="service-box project-hover">
+          <img src="assets/img/Screenshot 2025-01-22 125600.jpg" alt="Hockey Stadium Construction Project">
+          <h2 class="s-title">Hockey Stadium Construction Project</h2>
+          <p class="s-description text-center">
+            Created a detailed report for the initiation, planning, execution, and control of the hockey stadium construction project for a graduate-level project management class.
+          </p>
+          <button class="button" onClick="window.open('/assets/pdf/Hockey Stadium.pdf', '_blank')">Project Report</button>
+          <button class="button" onClick="window.open('/assets/pdf/Hockey stadium presentation.pptx', '_blank')">Project Presentation</button>
+        </div>
       </div>
-    </div>
-    <!-- Project 3 -->
-    <div class="col-md-4">
-      <div class="service-box">
-        <img src="assets/img/Bicycle.jpg" class="img-fluid" alt="Bicycle Frame Project">
-        <h2 class="s-title">Bicycle Frame Project</h2>
-        <p class="s-description text-center">
-          Designed a bicycle frame in CREO and performed FEA analysis to optimize its mass.
-        </p>
+      <!-- Project 2 -->
+      <div class="col-md-4">
+        <div class="service-box project-hover">
+          <img src="assets/img/combat robot.jpeg" alt="Combat Robot">
+          <h2 class="s-title">Combat Robot</h2>
+          <p class="s-description text-center">
+            We successfully designed, built, and programmed a combat robot for the National Robotic Challenge, winning a Bronze award. Skills used include Arduino programming, CAD design, FEA analysis, and fabrication.
+          </p>
+        </div>
       </div>
-    </div>
-    <!-- Project 4 -->
-    <div class="col-md-4">
-      <div class="service-box">
-        <img src="assets/img/Angry.png" class="img-fluid" alt="Angry Bird">
-        <h2 class="s-title">Angry Bird</h2>
-        <p class="s-description text-center">
-          Developed a MATLAB program to simulate ball projection, considering air drag and magnetic forces, enhancing simulation understanding.
-        </p>
-        <button class="button" onClick="window.open('/assets/pdf/ab.pdf', '_blank')">MATLAB Code</button>
+      <!-- Project 3 -->
+      <div class="col-md-4">
+        <div class="service-box project-hover">
+          <img src="assets/img/Bicycle.jpg" alt="Bicycle Frame Project">
+          <h2 class="s-title">Bicycle Frame Project</h2>
+          <p class="s-description text-center">
+            Designed a bicycle frame in CREO and performed FEA analysis to optimize its mass.
+          </p>
+        </div>
       </div>
+      <!-- Add other projects similarly -->
     </div>
-    <!-- Project 5 -->
-    <div class="col-md-4">
-      <div class="service-box">
-        <img src="assets/img/Engine.png" class="img-fluid" alt="Engine Assembly Project">
-        <h2 class="s-title">Engine Assembly Project</h2>
-        <p class="s-description text-center">
-          Assembled engine parts in Creo and created a detailed Bill of Materials (BOM).
-        </p>
-      </div>
-    </div>
-    <!-- Project 6 -->
-    <div class="col-md-4">
-      <div class="service-box">
-        <img src="assets/img/Guitar.jpg" class="img-fluid" alt="Robot Guitar">
-        <h2 class="s-title">Robot Guitar</h2>
-        <p class="s-description text-center">
-          Constructed a single-string robot guitar controlled by MATLAB coding, capable of playing an octave with motorized string tensioning and hammering.
-        </p>
-      </div>
-    </div>
-    <!-- Project 7 -->
-    <div class="col-md-4">
-      <div class="service-box">
-        <a target="_blank" href="/assets/pdf/CamProjectSam.GIF">
-          <img src="assets/img/Envelope.png" class="img-fluid" alt="Envelope Feeding and Stamping">
-        </a>
-        <h2 class="s-title">Envelope Feeding and Stamping</h2>
-        <p class="s-description text-center">
-          Designed a 1-DOF mechanism in SAM to feed and stamp envelopes.
-        </p>
-        <button class="button" onClick="window.open('/assets/pdf/CamProjectSam.GIF', '_blank')">Design Animation</button>
-        <button class="button" onClick="window.open('/assets/pdf/418.pptx', '_blank')">Project Presentation</button>
-      </div>
-    </div>
-    <!-- Project 8 -->
-    <div class="col-md-4">
-      <div class="service-box">
-        <a target="_blank" href="/assets/pdf/306.pdf">
-          <img src="assets/img/306.png" class="img-fluid" alt="Carbon Fiber in Aviation Industry">
-        </a>
-        <h2 class="s-title">Carbon Fiber in Aviation Industry</h2>
-        <p class="s-description text-center">
-          Investigated the properties of carbon fiber and its future applications in the aviation industry.
-        </p>
-        <button class="button" onClick="window.open('/assets/pdf/306.pdf', '_blank')">Project Report</button>
-      </div>
-    </div>
-  </div>
+  </section>
+</body>
+</html>
+
 </section>
 <!-- End Services Section -->
 
