--- a/index.html
+++ b/index.html
@@ -156,24 +156,24 @@
   <style>
     /* General styles for the project hover effect */
     .project-hover {
-      transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+      transition: transform 0.4s ease-in-out, box-shadow 0.4s ease-in-out;
       cursor: pointer;
     }
 
     .project-hover:hover {
-      transform: scale(1.1); /* Enlarge on hover */
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3); /* Add shadow effect */
+      transform: scale(1.2); /* Larger enlargement on hover */
+      box-shadow: 0 15px 40px rgba(0, 0, 0, 0.4); /* Stronger shadow effect */
       z-index: 10; /* Ensure it appears above other content */
       position: relative;
     }
 
     /* Ensure images inside the projects scale properly */
     .project-hover img {
-      transition: transform 0.3s ease-in-out;
+      transition: transform 0.4s ease-in-out;
     }
 
     .project-hover:hover img {
-      transform: scale(1.05); /* Slightly enlarge the image for extra effect */
+      transform: scale(1.1); /* Slightly enlarge the image for extra effect */
     }
 
     /* Add some spacing for better layout */
@@ -226,7 +226,7 @@
         <div class="service-box project-hover">
           <img src="assets/img/Screenshot 2025-01-22 125600.jpg" alt="Hockey Stadium Construction Project">
           <h2 class="s-title">Hockey Stadium Construction Project</h2>
-          <p class="s-description text-center">
+          <p class="s-description">
             Created a detailed report for the initiation, planning, execution, and control of the hockey stadium construction project for a graduate-level project management class.
           </p>
           <button class="button" onClick="window.open('/assets/pdf/Hockey Stadium.pdf', '_blank')">Project Report</button>
@@ -238,7 +238,7 @@
         <div class="service-box project-hover">
           <img src="assets/img/combat robot.jpeg" alt="Combat Robot">
           <h2 class="s-title">Combat Robot</h2>
-          <p class="s-description text-center">
+          <p class="s-description">
             We successfully designed, built, and programmed a combat robot for the National Robotic Challenge, winning a Bronze award. Skills used include Arduino programming, CAD design, FEA analysis, and fabrication.
           </p>
         </div>
@@ -248,16 +248,70 @@
         <div class="service-box project-hover">
           <img src="assets/img/Bicycle.jpg" alt="Bicycle Frame Project">
           <h2 class="s-title">Bicycle Frame Project</h2>
-          <p class="s-description text-center">
+          <p class="s-description">
             Designed a bicycle frame in CREO and performed FEA analysis to optimize its mass.
           </p>
         </div>
       </div>
-      <!-- Add other projects similarly -->
+      <!-- Project 4 -->
+      <div class="col-md-4">
+        <div class="service-box project-hover">
+          <img src="assets/img/Angry.png" alt="Angry Bird">
+          <h2 class="s-title">Angry Bird</h2>
+          <p class="s-description">
+            Developed a MATLAB program to simulate ball projection with air-drag and magnetic effects, enhancing understanding of simulations.
+          </p>
+          <button class="button" onClick="window.open('/assets/pdf/ab.pdf', '_blank')">MATLAB Code</button>
+        </div>
+      </div>
+      <!-- Project 5 -->
+      <div class="col-md-4">
+        <div class="service-box project-hover">
+          <img src="assets/img/Engine.png" alt="Engine Assembly Project">
+          <h2 class="s-title">Engine Assembly Project</h2>
+          <p class="s-description">
+            Assembled engine parts in CREO and created a Bill of Materials (BOM) for the project.
+          </p>
+        </div>
+      </div>
+      <!-- Project 6 -->
+      <div class="col-md-4">
+        <div class="service-box project-hover">
+          <img src="assets/img/Guitar.jpg" alt="Robot Guitar">
+          <h2 class="s-title">Robot Guitar</h2>
+          <p class="s-description">
+            Constructed a single-string wooden guitar capable of playing an octave, controlled via MATLAB programming.
+          </p>
+        </div>
+      </div>
+      <!-- Project 7 -->
+      <div class="col-md-4">
+        <div class="service-box project-hover">
+          <img src="assets/img/Envelope.png" alt="Envelope Feeding and Stamping">
+          <h2 class="s-title">Envelope Feeding and Stamping</h2>
+          <p class="s-description">
+            Designed a 1-DOF mechanism in SAM to feed and stamp envelopes using a crank mechanism.
+          </p>
+          <button class="button" onClick="window.open('/assets/pdf/CamProjectSam.GIF', '_blank')">Design Animation</button>
+          <button class="button" onClick="window.open('/assets/pdf/418.pptx', '_blank')">Project Presentation</button>
+        </div>
+      </div>
+      <!-- Project 8 -->
+      <div class="col-md-4">
+        <div class="service-box project-hover">
+          <img src="assets/img/306.png" alt="Carbon Fiber in Aviation Industry">
+          <h2 class="s-title">Carbon Fiber in Aviation Industry</h2>
+          <p class="s-description">
+            Investigated the properties and future applications of carbon fiber in the aviation industry.
+          </p>
+          <button class="button" onClick="window.open('/assets/pdf/306.pdf', '_blank')">Project Report</button>
+        </div>
+      </div>
     </div>
   </section>
 </body>
 </html>
+
 
 </section>
 <!-- End Services Section -->
