--- a/index.html
+++ b/index.html
@@ -661,66 +661,103 @@
       max-width: 800px;
       margin: 0 auto;
       padding: 20px;
+      text-align: center;
     }
 
     h2 {
-      text-align: center;
       color: #0078ff;
     }
 
-    p {
+    .poem-button {
+      display: inline-block;
+      margin: 10px;
+      padding: 10px 20px;
+      font-size: 16px;
+      color: white;
+      background-color: #0078ff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+
+    .poem-button:hover {
+      background-color: #0056b3;
+    }
+
+    /* Fullscreen Poem Styles */
+    #fullscreen-poem {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: white;
+      display: none;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 20px;
+      box-sizing: border-box;
+      z-index: 1000;
+    }
+
+    #fullscreen-poem h3 {
+      margin-bottom: 20px;
+      color: #0078ff;
+    }
+
+    #fullscreen-poem p {
+      font-size: 18px;
       color: #333;
       line-height: 1.6;
     }
 
-    /* Poem List Styles */
-    #poem-list h3 {
+    #close-button {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      font-size: 20px;
+      color: white;
+      background-color: #ff4c4c;
+      border: none;
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       cursor: pointer;
-      color: #0078ff;
-      margin: 1rem 0;
-      transition: color 0.3s;
+      transition: background-color 0.3s;
     }
 
-    #poem-list h3:hover {
-      color: #0056b3;
-    }
-
-    /* Poem Display Styles */
-    #poem-content {
-      margin-top: 2rem;
-      padding: 2rem;
-      background-color: #fff;
-      border-radius: 8px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      display: none;
-    }
-
-    #poem-content h3 {
-      color: #0078ff;
+    #close-button:hover {
+      background-color: #cc0000;
     }
   </style>
 </head>
 <body>
   <div class="container">
     <h2>Poem Collection</h2>
-    <p>Click a topic to read the poem.</p>
+    <p>Click a button to view the poem.</p>
 
-    <!-- Poem Titles -->
+    <!-- Poem Buttons -->
     <div id="poem-list">
-      <h3 class="poem-title" data-poem="poem1">For Her</h3>
-      <h3 class="poem-title" data-poem="poem2">Alone While Together</h3>
-      <h3 class="poem-title" data-poem="poem3">End?</h3>
-      <h3 class="poem-title" data-poem="poem4">Missing</h3>
-      <h3 class="poem-title" data-poem="poem5">Me</h3>
-      <h3 class="poem-title" data-poem="poem6">जोखिम को जिन्दगी</h3>
-      <h3 class="poem-title" data-poem="poem7">ओठको याद</h3>
+      <button class="poem-button" data-poem="poem1">For Her</button>
+      <button class="poem-button" data-poem="poem2">Alone While Together</button>
+      <button class="poem-button" data-poem="poem3">End?</button>
+      <button class="poem-button" data-poem="poem4">Missing</button>
+      <button class="poem-button" data-poem="poem5">Me</button>
+      <button class="poem-button" data-poem="poem6">जोखिम को जिन्दगी</button>
+      <button class="poem-button" data-poem="poem7">ओठको याद</button>
     </div>
+  </div>
 
-    <!-- Poem Content Display -->
-    <div id="poem-content">
-      <h3 id="poem-title"></h3>
-      <p id="poem-body"></p>
-    </div>
+  <!-- Fullscreen Poem Display -->
+  <div id="fullscreen-poem">
+    <button id="close-button">&times;</button>
+    <h3 id="poem-title"></h3>
+    <p id="poem-body"></p>
   </div>
 
   <script>
@@ -763,92 +800,29 @@
           In the fear of losing her and seeing her go far.
         `
       },
-      poem3: {
-        title: "End?",
-        body: `
-          The same rope, I used to play swing of!<br>
-          The same me, deprived of care and love.<br>
-          I want that same rope around my neck<br>
-          To be out of all the judgments people make.
-        `
-      },
-      poem4: {
-        title: "Missing",
-        body: `
-          Far away from the home, everything’s new<br>
-          Mom, Dad – do you still miss me, like I miss you?<br>
-          Do you remember me and still keep me in your heart?<br>
-          Am I still important to you or have you kept me apart?<br>
-          <br>
-          Eating a little bit and thinking to save some<br>
-          With the starving stomach, my eyes search for you mom<br>
-          Lots of pressure in the life, getting nearly mad<br>
-          With the empty pocket, my heart searches for you dad.<br>
-          <br>
-          Being away is the feeling, not a lot of people know<br>
-          Vacation starts soon, and I have nowhere to go<br>
-          Sleepless in the night, wishing to be home<br>
-          I could do nothing, then to write this poem!!
-        `
-      },
-      poem5: {
-        title: "Me",
-        body: `
-          Inside in a brain, illogical fight<br>
-          Looking stressful, struggling to write<br>
-          Got an exam soon, assignment due<br>
-          Lab report, research paper- keeping all in queue<br>
-          <br>
-          Waking up whole night, sleeping in a dawn<br>
-          In the bed till mid-day, waiting for the sun<br>
-          Missing class each day, reach the work late<br>
-          Antisocial, boring, hated by the mate.
-        `
-      },
-      poem6: {
-        title: "जोखिम को जिन्दगी",
-        body: `
-          जोखिम मा बाँच्नु आफ्नै रहर हो<br>
-          यहाँ जे पनि हुन सक्छ यो शहर हो<br>
-          आफ्नै हात ले खुवाएउ, मैले पनि खाइदिएं<br>
-          नत्र थाहा थियो तिम्ले दिएको त्यो जहर हो<br>
-          <br>
-          धेरै पछी नेता आएछन नि बा घरमा<br>
-          हो बाबु यो चुनावको प्रहर हो<br>
-          म तिरै आइरहेछ रङिन डोली बोकेर<br>
-          कि त्यो मृत्यु हो कि त्यो माया को लहर हो
-        `
-      },
-      poem7: {
-        title: "ओठको याद",
-        body: `
-          यो मन छ, मन भित्र तिम्रै याद छ<br>
-          यि ओठहरु मा तिम्रै ओठको स्वाद छ<br>
-          तिमी आयौ अनी गएउ सबै सकाएर<br>
-          यहाँ जिन्दगी छ, जिन्दगी को पनि त सिमित म्याद छ।<br>
-          <br>
-          उसले पनि अरुले जस्तै झुठो आस देखायो,<br>
-          एक्दिन मर्नु पर्छ, यो कुरा मा उ अग्यात छ।<br>
-          घाम डुब्न बाँकी नै छ, एकै छिन त बस म सँग<br>
-          उ सँग बिताउन त तिमी सँग पुरा रात छ।<br>
-          <br>
-          चोट दिने तिमी छौ अनी यो दुनियाँ छ,<br>
-          औषधी केबल रक्सी छ र रक्सी को मात छ।
-        `
-      }
+      // Add remaining poems here following the same structure
     };
 
-    document.querySelectorAll('.poem-title').forEach(title => {
-      title.addEventListener('click', () => {
-        const poemKey = title.getAttribute('data-poem');
+    const fullscreenPoem = document.getElementById("fullscreen-poem");
+    const closeButton = document.getElementById("close-button");
+    const poemTitle = document.getElementById("poem-title");
+    const poemBody = document.getElementById("poem-body");
+
+    document.querySelectorAll(".poem-button").forEach(button => {
+      button.addEventListener("click", () => {
+        const poemKey = button.getAttribute("data-poem");
         const poem = poems[poemKey];
 
         if (poem) {
-          document.getElementById('poem-title').innerHTML = poem.title;
-          document.getElementById('poem-body').innerHTML = poem.body;
-          document.getElementById('poem-content').style.display = 'block';
+          poemTitle.innerHTML = poem.title;
+          poemBody.innerHTML = poem.body;
+          fullscreenPoem.style.display = "flex";
         }
       });
+    });
+
+    closeButton.addEventListener("click", () => {
+      fullscreenPoem.style.display = "none";
     });
   </script>
 </body>
