--- a/index.html
+++ b/index.html
@@ -695,11 +695,12 @@
       background-color: white;
       display: none;
       flex-direction: column;
-      justify-content: center;
+      justify-content: flex-start;
       align-items: center;
       padding: 20px;
       box-sizing: border-box;
       z-index: 1000;
+      overflow-y: auto;
     }
 
     #fullscreen-poem h3 {
@@ -711,6 +712,7 @@
       font-size: 18px;
       color: #333;
       line-height: 1.6;
+      text-align: justify;
     }
 
     #close-button {
@@ -738,8 +740,8 @@
 </head>
 <body>
   <div class="container">
-    <h2>Poem Collection</h2>
-    <p>Click a button to view the poem.</p>
+  
+    <h3>Click a button to view the poem.</h3>
 
     <!-- Poem Buttons -->
     <div id="poem-list">
@@ -768,18 +770,15 @@
           Looking at the mirror, thinking of the past<br>
           Who said it’s light, time runs fast<br>
           Did the mistake again, it wasn’t the last<br>
-          Stars could be counted but the love is so vast.<br>
-          <br>
+          Stars could be counted but the love is so vast.<br><br>
           I express my feelings, she always says no<br>
           My brain says stop, heart keeps on doing so<br>
           I know that one day I’ll have to see her go<br>
-          She will be far away; I’ll still love her though.<br>
-          <br>
+          She will be far away; I’ll still love her though.<br><br>
           I stare at my phone, waiting for her call<br>
           I could wait my whole life, for that innocent girl<br>
           Lots of feeling I have, can’t write them all<br>
-          Coffee in the cup, makes the memory recall.<br>
-          <br>
+          Coffee in the cup, makes the memory recall.<br><br>
           She is returning, with the moment I’m waiting for<br>
           All the events of the past will once again occur<br>
           Not for you madam, not for you sir<br>
@@ -792,15 +791,78 @@
           Together in the bed but separated!<br>
           Bordered by ego that our attitude made.<br>
           Smiling, talking, and living but dead!<br>
-          Our love like fall color, starting to fade.<br>
-          <br>
+          Our love like fall color, starting to fade.<br><br>
           Cuddling, hugging, and kissing but physically far,<br>
           Trying to gaze each other from our emotional bar<br>
           Working to figure out where my weaknesses are,<br>
           In the fear of losing her and seeing her go far.
         `
       },
-      // Add remaining poems here following the same structure
+      poem3: {
+        title: "End?",
+        body: `
+          The same rope, I used to play swing of!<br>
+          The same me, deprived of care and love<br>
+          I want that same rope around my neck<br>
+          To be out of all the judgments people make.
+        `
+      },
+      poem4: {
+        title: "Missing",
+        body: `
+          Far away from the home, everything’s new<br>
+          Mom, Dad – do you still miss me, like I miss you?<br>
+          Do you remember me and still keep me in your heart?<br>
+          Am I still important to you or have you kept me apart?<br><br>
+          Eating a little bit and thinking to save some<br>
+          With the starving stomach, my eyes search for you mom<br>
+          Lots of pressure in the life, getting nearly mad<br>
+          With the empty pocket, my heart searches for you dad.<br><br>
+          Being away is the feeling, not a lot of people know<br>
+          Vacation starts soon, and I have nowhere to go<br>
+          Sleepless in the night, wishing to be home<br>
+          I could do nothing, then to write this poem!!
+        `
+      },
+      poem5: {
+        title: "Me",
+        body: `
+          Inside in a brain, illogical fight<br>
+          Looking stressful, struggling to write<br>
+          Got an exam soon, assignment due<br>
+          Lab report, research paper - keeping all in queue<br><br>
+          Waking up whole night, sleeping in a dawn<br>
+          In the bed till mid-day, waiting for the sun<br>
+          Missing class each day, reach the work late<br>
+          Antisocial, boring, hated by the mate.
+        `
+      },
+      poem6: {
+        title: "जोखिम को जिन्दगी",
+        body: `
+          जोखिम मा बाँच्नु आफ्नै रहर हो<br>
+          यहाँ जे पनि हुन सक्छ यो शहर हो<br>
+          आफ्नै हात ले खुवाएउ, मैले पनि खाइदिएं<br>
+          नत्र थाहा थियो तिम्ले दिएको त्यो जहर हो<br><br>
+          धेरै पछी नेता आएछन नि बा घरमा<br>
+          हो बाबु यो चुनावको प्रहर हो<br>
+          म तिरै आइरहेछ रङिन डोली बोकेर<br>
+          कि त्यो मृत्‍यु हो कि त्यो माया को लहर हो
+        `
+      },
+      poem7: {
+        title: "ओठको याद",
+        body: `
+          यो मन छ, मन भित्र तिम्रै याद छ<br>
+          यि ओठहरु मा तिम्रै ओठको स्वाद छ<br>
+          तिमी आयौ अनी गएउ सबै सकाएर<br>
+          यहाँ जिन्दगी छ, जिन्दगी को पनि त सिमित म्याद छ।<br><br>
+          उसले पनि अरुले जस्तै झुठो आस देखायो<br>
+          एक्दिन मर्नु पर्छ, यो कुरा मा उ अग्यात छ।<br>
+          घाम डुब्न बाँकी नै छ, एकै छिन त बस म सँग<br>
+          उ सँग बिताउन त तिमी सँग पुरा रात छ।
+        `
+      }
     };
 
     const fullscreenPoem = document.getElementById("fullscreen-poem");
