--- a/index.html
+++ b/index.html
@@ -452,9 +452,8 @@ using an IP mixer to make sure they are all connected in a single system</h5>
 <h5>&#8226; Expert in creating, managing, escalating, and resolving Cherwell tickets by communicating with clients and staffs</h5>
 
 
-    <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" a target="_blank" href="https://www.brp.com/en/" role="button"> Learn mroe about BRP here</a></p>
-   <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" a target="_blank" href="https://www.alumacraft.com/us/en/" role="button"> Learn mroe about Alumacraft here</a></p>
-              
+    <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" a target="_blank" href="https://www.mnsu.edu/it-solutions/" role="button"> Learn mroe about IT Solutions here</a></p>
+   
           </div>
 
 
