--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
       color: white;
     }
 
+    /* Gears Container */
     .gears {
       position: fixed;
       top: 50%;
@@ -130,29 +131,25 @@
     }
 
     .gear {
-      width: 50px;
-      height: 50px;
+      width: 100px;
+      height: 100px;
       margin: 10px;
-      border: 8px solid #555;
-      border-top-color: #0078ff;
-      border-radius: 50%;
       animation: spin 2s linear infinite;
     }
 
     .gear:nth-child(2) {
-      width: 70px;
-      height: 70px;
-      border-width: 10px;
+      width: 140px;
+      height: 140px;
       animation-duration: 1.5s;
     }
 
     .gear:nth-child(3) {
-      width: 90px;
-      height: 90px;
-      border-width: 12px;
+      width: 180px;
+      height: 180px;
       animation-duration: 1s;
     }
 
+    /* Animation for spinning */
     @keyframes spin {
       from {
         transform: rotate(0deg);
@@ -170,10 +167,23 @@
 </head>
 <body>
   <div class="gears">
-    <div class="gear"></div>
-    <div class="gear"></div>
-    <div class="gear"></div>
+    <!-- Gear with Teeth -->
+    <svg class="gear" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+      <path d="M50 25 L55 15 L65 15 L70 25 L80 30 L85 40 L80 50 L85 60 L80 70 L70 75 L65 85 L55 85 L50 75 L40 75 L35 85 L25 85 L20 75 L10 70 L5 60 L10 50 L5 40 L10 30 L20 25 L25 15 L35 15 L40 25 Z" fill="#555"/>
+      <circle cx="50" cy="50" r="20" fill="#0078ff" />
+    </svg>
+
+    <svg class="gear" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+      <path d="M50 20 L55 10 L65 10 L70 20 L80 25 L90 35 L85 50 L90 65 L80 75 L70 80 L65 90 L55 90 L50 80 L40 80 L35 90 L25 90 L20 80 L10 75 L5 65 L10 50 L5 35 L10 25 L20 20 L25 10 L35 10 L40 20 Z" fill="#333"/>
+      <circle cx="50" cy="50" r="15" fill="#0078ff" />
+    </svg>
+
+    <svg class="gear" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+      <path d="M50 15 L60 10 L70 15 L80 20 L90 30 L85 40 L90 50 L85 60 L80 70 L70 80 L60 85 L50 90 L40 85 L30 80 L20 70 L15 60 L10 50 L15 40 L20 30 L30 20 L40 15 Z" fill="#777"/>
+      <circle cx="50" cy="50" r="10" fill="#0078ff" />
+    </svg>
   </div>
+
 
 
   <script>
@@ -196,6 +206,7 @@
   </script>
 </body>
 </html>
+
 
 
 
